--- a/Example/LittleOwl.xcodeproj/xcshareddata/xcschemes/LittleOwl-Example.xcscheme
+++ b/Example/LittleOwl.xcodeproj/xcshareddata/xcschemes/LittleOwl-Example.xcscheme
@@ -40,7 +40,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "141201AD7080E323CDE1A4D47C952DC0"
+            BuildableName = "LittleOwl.framework"
+            BlueprintName = "LittleOwl"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
